--- a/baekjoon/1005_Jan21.ipynb
+++ b/baekjoon/1005_Jan21.ipynb
@@ -13,6 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "특정건물을 가장 빨리 지을 때까지 걸리는 최소시간을 알아내는 프로그램\n",
+    "\n",
     "첫째 줄에는 테스트케이스의 개수 T가 주어진다. 각 테스트 케이스는 다음과 같이 주어진다. 첫째 줄에 건물의 개수 N 과 건물간의 건설순서규칙의 총 개수 K이 주어진다. (건물의 번호는 1번부터 N번까지 존재한다) \n",
     "\n",
     "둘째 줄에는 각 건물당 건설에 걸리는 시간 D가 공백을 사이로 주어진다. 셋째 줄부터 K+2줄까지 건설순서 X Y가 주어진다. (이는 건물 X를 지은 다음에 건물 Y를 짓는 것이 가능하다는 의미이다) \n",
@@ -57,7 +59,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#솔루션 1:\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, K = int(input())\n",
+    "    D = int(input())   #바꿔야함\n",
+    "    for _ in range(K):\n",
+    "        XY = int(input())\n",
+    "    W = int(input())\n",
+    "    print(min_time)"
+   ]
   }
  ],
  "metadata": {
