--- a/baekjoon/1005_Jan21.ipynb
+++ b/baekjoon/1005_Jan21.ipynb
@@ -56,33 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T08:15:26.709961Z",
-     "start_time": "2020-01-28T08:15:26.704951Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp = {\"a\": 1, \"b\": 2}\n",
-    "\"a\" in temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-28T00:03:26.708441Z",
@@ -96,25 +70,30 @@
      "text": [
       "2\n",
       "4 4\n",
-      "10 100 10 100\n",
-      "{1: 10, 2: 100, 3: 10, 4: 100}\n",
-      "dd\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'dd'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-4aa62e00c988>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mK\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mD\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mtime_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mD\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'dd'"
+      "10 1 100 10\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "3 4\n",
+      "4\n",
+      "120\n",
+      "8 8\n",
+      "10 20 1 5 8 7 1 43\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "2 5\n",
+      "3 6\n",
+      "5 7\n",
+      "6 7\n",
+      "7 8\n",
+      "7\n",
+      "39\n"
      ]
     }
    ],
    "source": [
-    "#솔루션 1:\n",
+    "#솔루션 1: 시간초과...; 시간 제한 1초였당..\n",
     "\n",
     "T = int(input())\n",
     "\n",
@@ -125,8 +104,14 @@
     "    sequence_list = []\n",
     "    for _ in range(K):\n",
     "        a, b = map(int, input().split())\n",
-    "\n",
+    "        sequence_list.append((a, b))\n",
+    "        for s in sequence_list:\n",
+    "            if a == s[-1]:\n",
+    "                sequence_list.remove(sequence_list[-1])\n",
+    "                sequence_list.append(tuple([*s, b]))\n",
     "    W = int(input())\n",
+    "    selected = [x for x in sequence_list if x[-1] == W]\n",
+    "    min_time = max([sum([time_dict[a] for a in x]) for x in selected])\n",
     "    print(min_time)"
    ]
   },
@@ -196,6 +181,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4 4\n",
+      "10 1 100 10\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "3 4\n",
+      "4\n",
+      "120\n",
+      "8 8\n",
+      "10 20 1 5 8 7 1 43\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "2 5\n",
+      "3 6\n",
+      "5 7\n",
+      "6 7\n",
+      "7 8\n",
+      "7\n",
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션 2: 시간초과...\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, K = map(int, input().split())\n",
+    "    D = list(map(int, input().split()))   #time_dict 변수를 따로 생성하지 않고 그냥 리스트에서 인덱싱 하는 방식으로...\n",
+    "    sequence_list = []\n",
+    "    for _ in range(K):\n",
+    "        a, b = map(int, input().split())\n",
+    "        sequence_list.append((a, b))\n",
+    "        for s in sequence_list:\n",
+    "            if a == s[-1]:\n",
+    "                sequence_list.remove(sequence_list[-1])\n",
+    "                sequence_list.append(tuple([*s, b]))\n",
+    "    W = int(input())\n",
+    "    selected = [x for x in sequence_list if x[-1] ==W]\n",
+    "    min_time = max([sum([D[a-1] for a in x]) for x in selected])\n",
+    "    print(min_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4 4\n",
+      "10 1 100 10\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "3 4\n",
+      "4\n",
+      "120\n",
+      "8 8\n",
+      "10 20 1 5 8 7 1 43\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "2 5\n",
+      "3 6\n",
+      "5 7\n",
+      "6 7\n",
+      "7 8\n",
+      "7\n",
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션 3: 시간초과~!@~!~~@#@!~#!~#~!@!#\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, K = map(int, input().split())\n",
+    "    D = list(map(int, input().split())) \n",
+    "    sequence_list = []\n",
+    "    for _ in range(K):\n",
+    "        a, b = map(int, input().split())\n",
+    "        sequence_list.append((a, b))\n",
+    "        for s in sequence_list:\n",
+    "            if a == s[-1]:\n",
+    "                sequence_list.remove(sequence_list[-1])\n",
+    "                sequence_list.append(tuple([*s, b]))\n",
+    "    W = int(input())\n",
+    "    min_time = max([sum([D[a-1] for a in x]) for x in sequence_list if x[-1] == W])    #selected 변수 생략\n",
+    "    print(min_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4 4\n",
+      "10 1 100 10\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "3 4\n",
+      "4\n",
+      "120\n",
+      "8 8\n",
+      "10 20 1 5 8 7 1 43\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "2 5\n",
+      "3 6\n",
+      "5 7\n",
+      "6 7\n",
+      "7 8\n",
+      "7\n",
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션 4: \n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x) for x in input().split()]   #input을 sys.stdin.readline()으로!\n",
+    "    D = [int(x) for x in input().split()]\n",
+    "    sequence_list = []\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x) for x in input().split()]\n",
+    "        sequence_list.append((a, b))\n",
+    "        for s in sequence_list:\n",
+    "            if a == s[-1]:\n",
+    "                sequence_list.remove(sequence_list[-1])\n",
+    "                sequence_list.append(tuple([*s, b]))\n",
+    "    W = int(input())\n",
+    "    min_time = max([sum([D[a-1] for a in x]) for x in sequence_list if x[-1] == W]) \n",
+    "    print(min_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (1, 3), (2, 4), (3, 4)]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4 4\n",
+      "10 1 100 10\n",
+      "1 2\n",
+      "1 3\n",
+      "2 4\n",
+      "3 4\n",
+      "[(1, 2), (1, 3), (2, 4), (3, 4)]\n",
+      "o\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'o'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-4b8a041bfe94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0msequence_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequence_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'o'"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션5:\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x) for x in input().split()] \n",
+    "    D = [int(x) for x in input().split()]\n",
+    "    sequence_list = [tuple([int(x) for x in input().split()]) for _ in range(K)]\n",
+    "    print(sequence_list)\n",
+    "    W = int(input())\n",
+    "    for s in sequence_list if s[-1] == W\n",
+    "        \n",
+    "    print(min_time)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -218,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "varInspector": {
    "cols": {
