1005 updated AGAIN and yet to go

--- a/baekjoon/1005_Jan21.ipynb
+++ b/baekjoon/1005_Jan21.ipynb
@@ -10,51 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "특정건물을 지을 때까지 걸리는 최소시간을 알아내는 프로그램\n",
-    "\n",
-    "첫째 줄에는 테스트케이스의 개수 T가 주어진다. 각 테스트 케이스는 다음과 같이 주어진다. 첫째 줄에 건물의 개수 N 과 건물간의 건설순서규칙의 총 개수 K이 주어진다. (건물의 번호는 1번부터 N번까지 존재한다) \n",
-    "\n",
-    "둘째 줄에는 각 건물당 건설에 걸리는 시간 D가 공백을 사이로 주어진다. 셋째 줄부터 K+2줄까지 건설순서 X Y가 주어진다. (이는 건물 X를 지은 다음에 건물 Y를 짓는 것이 가능하다는 의미이다) \n",
-    "\n",
-    "마지막 줄에는 백준이가 승리하기 위해 건설해야 할 건물의 번호 W가 주어진다.\n",
-    "\n",
-    "건물 W를 건설완료 하는데 드는 최소 시간을 출력한다. 편의상 건물을 짓는 명령을 내리는 데는 시간이 소요되지 않는다고 가정한다.\n",
-    "\n",
-    "모든 건물을 지을 수 없는 경우는 없다.\n",
-    "\n",
-    "\n",
-    "2\n",
-    "4 4\n",
-    "10 1 100 10\n",
-    "1 2\n",
-    "1 3\n",
-    "2 4\n",
-    "3 4\n",
-    "4\n",
-    "8 8\n",
-    "10 20 1 5 8 7 1 43\n",
-    "1 2\n",
-    "1 3\n",
-    "2 4\n",
-    "2 5\n",
-    "3 6\n",
-    "5 7\n",
-    "6 7\n",
-    "7 8\n",
-    "7\n",
-    "\n",
-    "\n",
-    "\n",
-    "------------\n",
-    "120\n",
-    "39\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
@@ -119,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## enumerate 함수\n",
+    "## `enumerate`\n",
     "- 함수의 인자로 시퀀스형 데이터를 넘겨주면 인덱스를 앞에 붙여서 튜플 형태로 e.g. (i, v) 리턴함"
    ]
   },
@@ -291,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -364,51 +321,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-29T23:57:12.139973Z",
+     "start_time": "2020-01-29T23:57:12.079902Z"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "4 4\n",
-      "10 1 100 10\n",
-      "1 2\n",
-      "1 3\n",
-      "2 4\n",
-      "3 4\n",
-      "[(1, 2), (1, 3), (2, 4), (3, 4)]\n",
-      "o\n"
-     ]
-    },
-    {
      "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'o'",
+     "evalue": "invalid literal for int() with base 10: ''",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-55-4b8a041bfe94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0msequence_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequence_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'o'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-768a10d5cb0e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdin\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
-    "#솔루션5:\n",
+    "#솔루션5: 또 시간초과다..~!$#@^$*^#%@$!#@~#^&*&%$#@#$%^&*()\n",
+    "import sys\n",
     "\n",
-    "T = int(input())\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
     "\n",
     "for _ in range(T):\n",
-    "    N, K = [int(x) for x in input().split()] \n",
+    "    N, K = [int(x) for x in sys.stdin.readline().split()] \n",
     "    D = [int(x) for x in input().split()]\n",
-    "    sequence_list = [tuple([int(x) for x in input().split()]) for _ in range(K)]\n",
-    "    print(sequence_list)\n",
-    "    W = int(input())\n",
-    "    for s in sequence_list if s[-1] == W\n",
-    "        \n",
-    "    print(min_time)\n",
-    "    "
+    "    sequence_list = []\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x) for x in sys.stdin.readline().split()]\n",
+    "        sequence_list.append((a, b))\n",
+    "        for s in sequence_list:\n",
+    "            if a == s[-1]:\n",
+    "                sequence_list.remove(sequence_list[-1])\n",
+    "                sequence_list.append(tuple([*s, b]))\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    min_time = max([sum([D[a-1] for a in x]) for x in sequence_list if x[-1] == W]) \n",
+    "    print(min_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `sys.stdin.readline()`\n",
+    "\n",
+    "# *중요: jupyter는 지원 안함\n",
+    "(파이참에서 테스트)\n",
+    "\n",
+    "- `input()`함수보다 속도가 빠름\n",
+    "    - 이유: 입출력 스트림에 대한 문제 같습니다.\n",
+    "\n",
+    "파이썬이 동적변수라지만 변수의 형태로 저장하기 위해서 input() 메소드 내에서 가공을 할텐데\n",
+    "\n",
+    "raw_input() 은 문자열을 반환하고 input() 은 raw_input() 을 evaluate한 결과를 반환합니다.\n",
+    "\n",
+    "sys.stdin.readline() 은 한 줄의 문자열를 반환하는데 이것을 int() 로 묶어서 정수로 변환하는게 더 빠른가봅니다.\n",
+    "\n",
+    "다른 언어에도 똑같은 원리가 적용되지요.\n",
+    "\n",
+    "Java에서는 Scanner 보다 Buffered~ 가 더 처리가 가볍고, C++에서는 cout 보다 printf 를 이용하는게 시간적인 측면에서 효율적이라고 알고있습니다.\n",
+    "\n",
+    "C++은 함수오버로딩도 있고 해서 훨씬 오래 걸리는것 같지만요..\n",
+    "\n",
+    "\n",
+    "\n",
+    "- 다만 맨 끝의 개행문자까지 같이 입력받기 때문에 문자열을 저장하고 싶을 경우 `.rstrip()`을 추가로 해 주는 것이 좋다.\n",
+    "    - `int(sys.stdin.readline().rstrip())`\n",
+    "  \n",
+    "  \n",
+    "- 여러개를 입력받을 경우 `.split()`을 추가해주면 된다. (`input()`함수와 똑같음)\n",
+    "\n",
+    "\n",
+    "\n",
+    "출처:\n",
+    "\n",
+    "- https://www.acmicpc.net/board/view/855\n",
+    "- https://jeongmin-lee.tistory.com/40\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-30T02:45:00.393138Z",
+     "start_time": "2020-01-30T02:45:00.389171Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#솔루션 6: 순서 입력받으면서 바로바로 시간 계산하는 방식\n",
+    "#결과: 런타임 에러 어떻게 해결하라는 거지ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x) for x in sys.stdin.readline().split()]\n",
+    "    D = [int(x) for x in sys.stdin.readline().split()]   #건물별 소요시간이 저장된 리스트\n",
+    "    time_dict = {1: D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x) for x in sys.stdin.readline().split()]\n",
+    "        temp = time_dict[a] + D[b - 1]\n",
+    "        if b in time_dict and temp < time_dict[b]: continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    print(time_dict[W])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 7: 입력 시 개행문자 고려해서 sys.stdin.readline()에 모두 .rstrip() 추가했다.\n",
+    "#결과: 런타임 에러,,,,^^,,,런타임 에러란 몰가,,,,,\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    D = [int(x) for x in sys.stdin.readline().rstrip().split()]   #건물별 소요시간이 저장된 리스트\n",
+    "    time_dict = {1: D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x) for x in sys.stdin.readline().rstrip().split()]\n",
+    "        temp = time_dict[a] + D[b - 1]\n",
+    "        if b in time_dict and temp < time_dict[b]: continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    print(time_dict[W])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 런타임 에러(Runtime Error)\n",
+    "\n",
+    "런타임 오류의 발생 원인은 매우 다양하지만 피상적인 이유는 단 하나입니다.\n",
+    "\n",
+    "> 프로그램이 동작 중에 어떤 이유로 **잘못된 데이터**를 가지게 되어 잘못된 처리를 진행하려 할 때 런타임 오류가 발생하는 것입니다.\n",
+    "\n",
+    "이 때 프로그램 자체적으로 조정하거나, 혹은 OS가 끼어들어 프로그램을 중단시킵니다. 프로그램이 런타임 오류를 자체적으로 조정했다면 사용자는 여전히 프로그램을 계속 이용 할 수 있을 것입니다. 하지만 OS가 프로그램을 중지시켰다면 더 이상 이용하지 못하고 사용중이던 데이터도 증발하게 됩니다.\n",
+    "\n",
+    "프로그래머들은 분명히 개발 과정에서 런타임 오류가 발생할 가능성을 통찰하여 오류가 발생해도 잘못된 처리를 하지 않도록하는 코드를 미리 넣어서 사용자에게 자세한 알림창을 띄워 친절하게 알려주지만, 프로그래머들도 신은 아닌 관계로 어쩌다보면 예기치 못한 런타임 오류(unexpected run-time error)가 발생합니다.\n",
+    "\n",
+    "\n",
+    "그러면 그렇게 프로그램이 핸들링하지 못한 예기치 못한 런타임 오류는 어떻게 될까? 그것은 '하수 종말 처리장'을 떠올리면 어떻게 될지 알기 쉽습니다. 핸들링되지 못한 런타임 오류는 OS(혹은 VM)가 최종적으로 처리합니다. OS는 런타임 오류를 최종적으로 핸들링하여 사용자에게 예기치 못한 런타임 오류가 발생하였음을 알린 후 프로그램을 종료시키고 다시 정상적으로 컴퓨터를 운영합니다. 이것이 윈도우에서 종종 보게되는 다음과 같은 장면의 발생 과정입니다.\n",
+    "\n",
+    "출처: http://www.codesecure.co.kr/home/faq_view.php?srlno=23&kind="
    ]
   },
   {
@@ -416,7 +486,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#솔루션 8: int()함수 안에도 .strip() 추가해서 .split()후에 혹시 남아있을지 모를 whitespace 제거\n",
+    "#결과: 런타임 에러ㅋ\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]   #건물별 소요시간이 저장된 리스트\n",
+    "    time_dict = {1: D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "        temp = time_dict[a] + D[b - 1]\n",
+    "        if b in time_dict and temp < time_dict[b]: continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    print(time_dict[W])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 9: 혹시 몰라서 조건문에 소괄호 추가\n",
+    "#결과: 런타임\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]   #건물별 소요시간이 저장된 리스트\n",
+    "    time_dict = {1: D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "        temp = time_dict[a] + D[b - 1]\n",
+    "        if (b in time_dict) and (temp < time_dict[b]): continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    print(time_dict[W])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 10: if문을 all()로 처리했다.\n",
+    "#https://stackoverflow.com/questions/181530/styling-multi-line-conditions-in-if-statements 참조함\n",
+    "#결과: 런타임\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]   #건물별 소요시간이 저장된 리스트\n",
+    "    time_dict = {1: D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "        temp = time_dict[a] + D[b - 1]\n",
+    "        if all([b in time_dict and temp < time_dict[b]]): continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    print(time_dict[W])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 11:\n",
+    "#결과:\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    D = [int(x) for x in sys.stdin.readline().rstrip().split()]   #건물별 소요시간이 저장된 리스트\n",
+    "    time_dict = {1: D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x) for x in sys.stdin.readline().rstrip().split()]\n",
+    "        temp = time_dict[a] + D[b - 1]\n",
+    "        if all([b in time_dict and temp < time_dict[b]]): continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    print(time_dict[W])"
+   ]
   }
  ],
  "metadata": {
@@ -435,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   },
   "varInspector": {
    "cols": {
