--- a/baekjoon/1005_Jan21.ipynb
+++ b/baekjoon/1005_Jan21.ipynb
@@ -478,7 +478,20 @@
     "\n",
     "그러면 그렇게 프로그램이 핸들링하지 못한 예기치 못한 런타임 오류는 어떻게 될까? 그것은 '하수 종말 처리장'을 떠올리면 어떻게 될지 알기 쉽습니다. 핸들링되지 못한 런타임 오류는 OS(혹은 VM)가 최종적으로 처리합니다. OS는 런타임 오류를 최종적으로 핸들링하여 사용자에게 예기치 못한 런타임 오류가 발생하였음을 알린 후 프로그램을 종료시키고 다시 정상적으로 컴퓨터를 운영합니다. 이것이 윈도우에서 종종 보게되는 다음과 같은 장면의 발생 과정입니다.\n",
     "\n",
-    "출처: http://www.codesecure.co.kr/home/faq_view.php?srlno=23&kind="
+    "출처: http://www.codesecure.co.kr/home/faq_view.php?srlno=23&kind=\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. 배열에 할당된 크기를 넘어서 접근했을 때\n",
+    "2. 전역 배열의 크기가 메모리 제한을 초과할 때\n",
+    "3. 지역 배열의 크기가 스택 크기 제한을 넘어갈 때\n",
+    "4. 0으로 나눌 떄\n",
+    "5. 라이브러리에서 예외를 발생시켰을 때\n",
+    "6. 재귀 호출이 너무 깊어질 때\n",
+    "7. 이미 해제된 메모리를 또 참조할 때\n",
+    "8. 프로그램(main 함수)이 0이 아닌 수를 반환했을 때\n",
+    "\n",
+    "출처: https://www.acmicpc.net/board/view/22980"
    ]
   },
   {
@@ -560,8 +573,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션 11:\n",
-    "#결과:\n",
+    "#솔루션 11: 중첩 if문으로 바꿈 (if문에서 time_dict[b]가 존재하지 않을 때 참조해서 런타임 에러가 나나 싶어서)\n",
+    "#결과: ㄾㅇ\n",
     "\n",
     "import sys\n",
     "T = int(sys.stdin.readline().rstrip())\n",
@@ -571,6 +584,32 @@
     "    time_dict = {1: D[0]}\n",
     "    for _ in range(K):\n",
     "        a, b = [int(x) for x in sys.stdin.readline().rstrip().split()]\n",
+    "        temp = time_dict[a] + D[b - 1]\n",
+    "        if b in time_dict:\n",
+    "            if temp < time_dict[b]: continue\n",
+    "            else: time_dict[b] = temp\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = int(sys.stdin.readline().rstrip())\n",
+    "    print(time_dict[W])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 12: \n",
+    "#결과: \n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]   #건물별 소요시간이 저장된 리스트\n",
+    "    time_dict = {1: D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
     "        temp = time_dict[a] + D[b - 1]\n",
     "        if all([b in time_dict and temp < time_dict[b]]): continue\n",
     "        else: time_dict[b] = temp\n",
