--- a/baekjoon/1005_Jan21.ipynb
+++ b/baekjoon/1005_Jan21.ipynb
@@ -599,8 +599,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션 12: \n",
-    "#결과: \n",
+    "#솔루션 12: 딕셔너리 키를 다 str 타입으로 바꿔줌\n",
+    "#결과: ㄾㅇ\n",
     "\n",
     "import sys\n",
     "T = int(sys.stdin.readline().rstrip())\n",
@@ -616,6 +616,60 @@
     "    W = int(sys.stdin.readline().rstrip())\n",
     "    print(time_dict[W])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 12: 딕셔너리 키를 다 str 타입으로 바꿔줌\n",
+    "#결과: ㄾㅇ\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    time_dict = {'1': D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = [x.strip() for x in sys.stdin.readline().rstrip().split()]\n",
+    "        temp = time_dict[a] + D[int(b) - 1]\n",
+    "        if b in time_dict and temp < time_dict[b]: continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = sys.stdin.readline().rstrip()\n",
+    "    print(time_dict[W])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 13: ㄹㅌㅇ\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    K = int(sys.stdin.readline().rstrip().split()[-1])\n",
+    "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    time_dict = {'1': D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = sys.stdin.readline().rstrip().split()\n",
+    "        temp = time_dict[a] + D[int(b) - 1]\n",
+    "        if b in time_dict and temp < time_dict[b]: continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = sys.stdin.readline().rstrip()\n",
+    "    print(time_dict[W])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
