still working on 1005

--- a/baekjoon/1005_Jan21.ipynb
+++ b/baekjoon/1005_Jan21.ipynb
@@ -669,6 +669,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#솔루션 14:\n",
+    "\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline().rstrip())\n",
+    "for _ in range(T):\n",
+    "    N, K = [int(x.strip()) for x in sys.stdin.readline().rstrip().split())]\n",
+    "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
+    "    time_dict = {'1': D[0]}\n",
+    "    for _ in range(K):\n",
+    "        a, b = sys.stdin.readline().rstrip().split()\n",
+    "        temp = time_dict[a] + D[int(b) - 1]\n",
+    "        if b in time_dict and temp < time_dict[b]: continue\n",
+    "        else: time_dict[b] = temp\n",
+    "    W = sys.stdin.readline().rstrip()\n",
+    "    print(time_dict[W])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -688,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "varInspector": {
    "cols": {
