--- a/baekjoon/1005_Jan21.ipynb
+++ b/baekjoon/1005_Jan21.ipynb
@@ -675,7 +675,7 @@
     "import sys\n",
     "T = int(sys.stdin.readline().rstrip())\n",
     "for _ in range(T):\n",
-    "    N, K = [int(x.strip()) for x in sys.stdin.readline().rstrip().split())]\n",
+    "    K = int(sys.stdin.readline().rstrip().split()[-1])\n",
     "    D = [int(x.strip()) for x in sys.stdin.readline().rstrip().split()]\n",
     "    time_dict = {'1': D[0]}\n",
     "    for _ in range(K):\n",
