March 8 1006 in progress

--- a/baekjoon/1006_Jan22.ipynb
+++ b/baekjoon/1006_Jan22.ipynb
@@ -5,8 +5,16 @@
    "metadata": {},
    "source": [
     "백준 #1006\n",
-    "\n"
+    "\n",
+    "https://www.acmicpc.net/problem/1006"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -25,7 +33,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "varInspector": {
    "cols": {
