--- a/baekjoon/1006_Jan22.ipynb
+++ b/baekjoon/1006_Jan22.ipynb
@@ -54,12 +54,209 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8 100\n",
+      "70 60 55 43 57 60 44 50 58 40 47 90 45 52 80 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션 1\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, W = map(int, input().split())\n",
+    "    enemies = dict(enumerate(map(int, input().split())))\n",
+    "    for area in enemies:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 70,\n",
+       " 1: 60,\n",
+       " 2: 55,\n",
+       " 3: 43,\n",
+       " 4: 57,\n",
+       " 5: 60,\n",
+       " 6: 44,\n",
+       " 7: 50,\n",
+       " 8: 58,\n",
+       " 9: 40,\n",
+       " 10: 47,\n",
+       " 11: 90,\n",
+       " 12: 45,\n",
+       " 13: 52,\n",
+       " 14: 80,\n",
+       " 15: 40}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enemies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "K = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1 2 3 4 5'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', ' ', '2', ' ', '3', ' ', '4', ' ', '5']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: '1', 1: '2', 2: '3', 3: '4', 4: '5'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(enumerate(K.split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#솔루션 1\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
