March 13 1006 sol1 in progress

--- a/baekjoon/1006_Jan22.ipynb
+++ b/baekjoon/1006_Jan22.ipynb
@@ -136,6 +136,362 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "areas = list(range(1, N+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 1\n",
+    "index = areas.index(num)\n",
+    "nums = [num, areas[index+1], areas[(index+7)%8], num+8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 8, 9]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [2, 8, 9]}\n",
+      "{2: [3, 1, 10]}\n",
+      "{3: [4, 2, 11]}\n",
+      "{4: [5, 3, 12]}\n",
+      "{5: [6, 4, 13]}\n",
+      "{6: [7, 5, 14]}\n",
+      "{7: [8, 6, 15]}\n",
+      "{8: [1, 7, 16]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in areas:\n",
+    "    index = areas.index(num)\n",
+    "    nums = {num: [areas[(index+1)%8], areas[(index+7)%8], num+8]}\n",
+    "    print(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nears = {num: [areas[(areas.index(num)+1)%8], areas[(areas.index(num)+7)%8], num+8] for num in areas}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 8, 9],\n",
+       " 2: [3, 1, 10],\n",
+       " 3: [4, 2, 11],\n",
+       " 4: [5, 3, 12],\n",
+       " 5: [6, 4, 13],\n",
+       " 6: [7, 5, 14],\n",
+       " 7: [8, 6, 15],\n",
+       " 8: [1, 7, 16]}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nears"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inner_areas = list(range(1, N+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outer_areas = list(range(N+1, 2*N+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inner_areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 10, 11, 12, 13, 14, 15, 16]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outer_areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inner = {num: [inner_areas[(inner_areas.index(num)+1)%8], inner_areas[(inner_areas.index(num)+7)%8], num+8] for num in inner_areas}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 8, 9],\n",
+       " 2: [3, 1, 10],\n",
+       " 3: [4, 2, 11],\n",
+       " 4: [5, 3, 12],\n",
+       " 5: [6, 4, 13],\n",
+       " 6: [7, 5, 14],\n",
+       " 7: [8, 6, 15],\n",
+       " 8: [1, 7, 16]}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outer = {num: [outer_areas[(outer_areas.index(num)+1)%8], outer_areas[(outer_areas.index(num)+7)%8], num-8] for num in outer_areas}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{9: [10, 16, 1],\n",
+       " 10: [11, 9, 2],\n",
+       " 11: [12, 10, 3],\n",
+       " 12: [13, 11, 4],\n",
+       " 13: [14, 12, 5],\n",
+       " 14: [15, 13, 6],\n",
+       " 15: [16, 14, 7],\n",
+       " 16: [9, 15, 8]}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inner.update(outer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 8, 9],\n",
+       " 2: [3, 1, 10],\n",
+       " 3: [4, 2, 11],\n",
+       " 4: [5, 3, 12],\n",
+       " 5: [6, 4, 13],\n",
+       " 6: [7, 5, 14],\n",
+       " 7: [8, 6, 15],\n",
+       " 8: [1, 7, 16],\n",
+       " 9: [10, 16, 1],\n",
+       " 10: [11, 9, 2],\n",
+       " 11: [12, 10, 3],\n",
+       " 12: [13, 11, 4],\n",
+       " 13: [14, 12, 5],\n",
+       " 14: [15, 13, 6],\n",
+       " 15: [16, 14, 7],\n",
+       " 16: [9, 15, 8]}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False]\n",
+      "[False, False, True]\n",
+      "[True, False, False]\n",
+      "[True, True, False]\n",
+      "[False, True, False]\n",
+      "[False, False, False]\n",
+      "[True, False, False]\n",
+      "[False, True, True]\n",
+      "[True, True, False]\n",
+      "[True, True, True]\n",
+      "[False, True, False]\n",
+      "[False, False, False]\n",
+      "[True, False, False]\n",
+      "[False, True, False]\n",
+      "[False, False, False]\n",
+      "[True, False, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for area in inner:\n",
+    "    my_enemies = enemies[area-1]\n",
+    "    dispatchable = [True if my_enemies + enemies[joint-1] <= W else False for joint in inner[area]]\n",
+    "    if dispatchable.count(True) == 1:\n",
+    "        count += 1\n",
+    "        inner.pop(area)\n",
+    "    print(dispatchable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
